<resources>
    <string name="app_name">TicTacToe</string>
    <string name="tictactoeheader">Tic Tac Toe</string>
    <string name="play_button_text">PLAY</string>
    <string name="tutorial_button_text">TUTORIAL</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="edit_player_name">player name</string>
    <string name="save_btn">SAVE</string>
    <string name="new_record">NEW RECORD!!!</string>
    <string name="player_name_hint">PLAYER NAME</string>
    <string name="records_button">RECORDS</string>
    <string name="main_menu_button_text">MAIN MENU</string>
    <string name="finishedIntro">Finish</string>
    <string name="skip">Skip</string>
    <string name="introDescription1">Welcome</string>
</resources>